fix(Booking): add margin between kind title and page top

--- a/frontend/src/pages/Booking/Booking.module.scss
+++ b/frontend/src/pages/Booking/Booking.module.scss
@@ -210,6 +210,7 @@
   font-weight: 600;
   border-bottom: 1px solid $lightGrey;
   padding-bottom: 10px;
+  scroll-margin-top: 5.5rem;
 }
 .activeKinds {
   background-color: $mainYellow;
